<resources>
    <!-- General Application Strings -->
    <string name="app_name">BushWhack</string>

    <!-- Login and Sign up -->
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>

    <!-- Markers -->
    <string-array name="markerTypes">
        <item>Starting point</item>
        <item>Intermediate point</item>
        <item>Finish point</item>
...
    <!-- Trail row -->
    <string name="trail_row_start">Start</string>
    <string name="trail_row_review">Review</string>
    <string name="trail_row_remove">Remove</string>
    <string name="profile_continue">Continue</string>
    <string name="profile_new_trail">New Trail</string>
    <string name="profile_quit">Quit</string>
</resources>

