...
            android:src="@drawable/picture_dummy_a"
            app:civ_border_color="#FFFFFFFF"
            app:civ_border_width="4dp" />
        <!-- civ border is not rendered for some reason-->

        <TextView
            android:id="@+id/text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingTop="16dp"
            android:text=""
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/text_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:paddingBottom="16dp"
            android:paddingTop="0dp"
            android:text=""
...
