...
        android:id="@+id/action_start_trail"
        android:enabled="true"
        android:icon="@drawable/ic_near_me_black_24dp"
        android:title="@string/profile_continue"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:enabled="true"
        android:icon="@drawable/ic_airline_seat_individual_suite_black_24dp"
        android:title="@string/profile_quit"
        app:showAsAction="ifRoom" />
</menu>

